styling fix: letter spacing

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -23,7 +23,6 @@ body {
   font-size: 14px;
   line-height: 1.2;
   color: #000000;
-  letter-spacing: 0.3px;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 
