--- a/assets/styles/start.css
+++ b/assets/styles/start.css
@@ -15,6 +15,7 @@
 
 #start-page .search-actions .advancedBtn {
   border: none;
+  text-align: center;
   min-width: 15vw;
   border-radius: 4px;
   height: 5vh;
